<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="addSubtract">+/-</string>
    <string name="equals">=</string>
    <string name="clear">clear</string>
    <string name="history">history</string>
    <string name="rootX">&#x221A;x</string>
    <string name="nRootX">n&#x221A;x</string>
    <string name="xSquare">x^2</string>
    <string name="xRaisedToN">x^n</string>
    <string name="log">log</string>
    <string name="naturalLog">ln</string>
    <string name="divide"> &#x00F7;</string>
</resources>